Improved Design and structure, multi-page

--- a/index.html
+++ b/index.html
@@ -1,90 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ofek Sadeh | Personal Website</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      line-height: 1.6;
-      color: #333;
-      background-color: #f9f9f9;
-    }
-    header, section, footer {
-      max-width: 900px;
-      margin: auto;
-      padding: 2rem 1rem;
-    }
-    h1, h2 {
-      color: #222;
-    }
-    .hero {
-      text-align: center;
-      padding: 5rem 1rem;
-      background-color: #eaeaea;
-    }
-    .project, .achievement, .hobby {
-      margin-bottom: 1.5rem;
-    }
-    footer {
-      text-align: center;
-      font-size: 0.9rem;
-      color: #777;
-    }
-    a {
-      color: #0066cc;
-      text-decoration: none;
-    }
-  </style>
-</head>
-<body>
-  <header class="hero">
-    <h1>Ofek Sadeh</h1>
-    <p>Welcome to my personal website. I'm a curious builder and problem solver.</p>
-  </header>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I'm a student passionate about robotics, cybersecurity, and gamifying productivity. I enjoy leading technical projects and building communities around innovation.</p>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Shadowbound</h3>
-      <p>A 2D top-down puzzle game exploring dynamic lighting and stealth mechanics.</p>
-    </div>
-    <div class="project">
-      <h3>Life Gamification App</h3>
-      <p>An app to level up real-life habits with quests, XP, and social systems.</p>
-    </div>
-  </section>
-
-  <section id="achievements">
-    <h2>Achievements</h2>
-    <div class="achievement">
-      <p>Executive Officer - FRC Robotics Team</p>
-    </div>
-    <div class="achievement">
-      <p>Organized and led cybersecurity awareness events</p>
-    </div>
-  </section>
-
-  <section id="hobbies">
-    <h2>Hobbies</h2>
-    <div class="hobby">
-      <p>Building game engines and automation tools</p>
-    </div>
-    <div class="hobby">
-      <p>Exploring ethical hacking and open-source intelligence</p>
-    </div>
-  </section>
-
-  <footer>
-    <p>Connect with me on <a href="#">GitHub</a> | <a href="#">LinkedIn</a></p>
-    <p>&copy; 2025 Ofek Sadeh</p>
-  </footer>
-</body>
-</html>
+<nav>
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="achievements.html">Achievements</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
+  </ul>
+</nav>
